Adding the ability to specify column names to include during insert